--- a/package.json
+++ b/package.json
@@ -18,7 +18,38 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@syncfusion/ej2-angular-base": "24.2.3",
+    "@syncfusion/ej2-angular-buttons": "24.2.7",
+    "@syncfusion/ej2-angular-calendars": "24.2.5",
+    "@syncfusion/ej2-angular-dropdowns": "24.2.7",
+    "@syncfusion/ej2-angular-grids": "^24.2.7",
+    "@syncfusion/ej2-angular-inputs": "24.2.7",
+    "@syncfusion/ej2-angular-navigations": "24.2.4",
+    "@syncfusion/ej2-angular-notifications": "24.2.4",
+    "@syncfusion/ej2-angular-popups": "24.2.8",
+    "@syncfusion/ej2-angular-schedule": "24.2.4",
+    "@syncfusion/ej2-angular-splitbuttons": "24.2.7",
+    "@syncfusion/ej2-base": "24.2.7",
+    "@syncfusion/ej2-buttons": "24.2.7",
+    "@syncfusion/ej2-calendars": "24.2.5",
+    "@syncfusion/ej2-data": "24.2.3",
+    "@syncfusion/ej2-dropdowns": "24.2.7",
+    "@syncfusion/ej2-icons": "24.2.3",
+    "@syncfusion/ej2-inputs": "24.2.7",
+    "@syncfusion/ej2-navigations": "24.2.4",
+    "@syncfusion/ej2-notifications": "24.2.4",
+    "@syncfusion/ej2-popups": "24.2.8",
+    "@syncfusion/ej2-schedule": "24.2.4",
+    "@syncfusion/ej2-splitbuttons": "24.2.7",
+    "@types/codemirror": "0.0.56",
+    "@types/marked": "0.3.0",
+    "codemirror": "5.65.15",
+    "core-js": "2.6.9",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "marked": "^12.0.0",
+    "reflect-metadata": "0.2.1",
     "rxjs": "~7.8.0",
+    "rxjs-compat": "6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
