--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "@types/marked": "0.3.0",
     "codemirror": "5.65.15",
     "core-js": "2.6.9",
+    "jwt-decode": "^4.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "marked": "^12.0.0",
+    "ngx-cookie-service": "^17.1.0",
     "reflect-metadata": "0.2.1",
     "rxjs": "~7.8.0",
     "rxjs-compat": "6.6.7",
